--- a/css/form.css
+++ b/css/form.css
@@ -28,14 +28,14 @@ main div {
     display: inline-block;
     vertical-align: top;
     text-align: left;
-    /* padding-top: 30px;
-    padding-bottom: 30px; */
+    
+    
 }
 
 .forms {
     display: block;
     text-align: center;
-    
+    margin-top: 40px;
 }
 
 h2 {
